--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <title>Snake</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="index.js"></script>
+    <script defer type="module" src="index.js"></script>
   </head>
   <body>
     <h1>🐍 Snake</h1>
-    <button id="test-button">Click</button>
+    <button id="test-button">Start</button>
     <div id="board">
     </div>
   </body>
