Use window object for interval

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>🐍 Snake</h1>
-    <button id="test-button">Start</button>
+    <div id="btn-row">
+      <button id="test-button">Start</button>
+    <button id="reset-button">Reset</button>
+    </div>
     <div id="board">
     </div>
   </body>
