--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Snake</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script defer type="module" src="index.js"></script>
   </head>
   <body>
     <h1>🐍 Snake</h1>
     <div id="btn-row">
-      <button id="test-button">Start</button>
-    <button id="reset-button">Reset</button>
+      <button id="btn">Start</button>
     </div>
-    <div id="board">
-    </div>
+    <div id="board"></div>
   </body>
 </html>
