Added score, directions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <script defer type="module" src="index.js"></script>
   </head>
   <body>
-    <h1>🐍 Snake</h1>
+    <h1>Snake</h1>
+    <details>
+      <summary>Directions</summary>
+      h: right, l: left, j: down, k: up, i: start/restart
+    </details>
+    <p>
+      Score: <span id="score">0</span>
+    </p>
     <div id="board"></div>
   </body>
 </html>
