--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>Snake</h1>
-    <details>
+    <details id="details">
       <summary>Directions</summary>
       h: right, l: left, j: down, k: up, i: start/restart
     </details>
-    <p>
+    <p id="score-row">
       Score: <span id="score">0</span>
     </p>
     <div id="board"></div>
